rust/tests/scenarios/error/02_undefined_symbol.dsl

(cbu.create
    :name "Symbol Test"
    :client-type "individual"
    :jurisdiction "GB"
    :as @cbu)

(document.catalog
    :cbu-id @cbu
    :entity-id @nonexistent
    :document-type "PASSPORT")
